fix: dropdown alignment

--- a/src/headers/SiteHeader.scss
+++ b/src/headers/SiteHeader.scss
@@ -89,7 +89,7 @@
 
   // Link menu
   --navbar-menu-desktop-height: 75px;
-  --navbar-menu-desktop-margin: var(--bloom-s2) 0 0 0;
+  --navbar-menu-desktop-margin: inherit;
   --navbar-menu-desktop-padding: inherit;
   --navbar-menu-desktop-width: inherit;
   --navbar-menu-min-width: inherit;
@@ -97,7 +97,7 @@
   --navbar-menu-mobile-margin: inherit;
   --navbar-menu-mobile-padding: inherit;
   --navbar-menu-mobile-width: inherit;
-  --navbar-menu-wrap: 450px;
+  --navbar-menu-wrap: inherit;
 }
 
 .site-header__mobile-dropdown-container {
@@ -206,6 +206,17 @@
   }
 }
 
+.site-header__base-wrapped {
+  margin-top: 0.2rem;
+  margin-bottom: var(--bloom-s12);
+  padding-left: 0;
+}
+
+.site-header__base-inline {
+  margin-top: 0.025rem;
+  margin-bottom: 0;
+}
+
 .site-header__logo-container {
   display: flex;
   align-items: center;
@@ -215,6 +226,7 @@
   padding: var(--logo-container-padding-mobile);
 
   @media (min-width: $screen-md) {
+    flex-grow: 0;
     padding: var(--logo-container-padding-desktop);
     flex-shrink: 0;
   }
@@ -336,8 +348,8 @@
 .site-header__navbar-menu {
   display: flex;
   justify-content: flex-end;
-  flex-basis: var(--navbar-menu-wrap);
-  flex-grow: 1;
+  flex-basis: inherit;
+  flex-grow: 0;
 
   min-width: var(--navbar-menu-min-width);
   height: var(--navbar-menu-mobile-height);
@@ -346,6 +358,8 @@
   padding: var(--navbar-menu-mobile-padding);
 
   @media (min-width: $screen-md) {
+    flex-basis: var(--navbar-menu-wrap);
+    flex-grow: 1;
     height: var(--navbar-menu-desktop-height);
     margin: var(--navbar-menu-desktop-margin);
     width: var(--navbar-menu-desktop-width);
@@ -417,12 +431,18 @@
 
 .site-header__navbar-wrapped {
   background-color: var(--wrapped-background-color);
-  justify-content: center;
+  justify-content: flex-start;
+  margin-top: var(--bloom-s3);
+  padding-left: var(--bloom-s2);
 }
 
 .site-header__navbar-inline {
   background-color: var(--background-color);
   justify-content: flex-end;
+
+  .site-header__link {
+    margin-top: var(--bloom-s3);
+  }
 }
 
 .site-header__link {
